--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "name": "prestashop/homeslider",
-  "description": "PrestaShop module homeslider",
-  "homepage": "https://github.com/PrestaShop/homeslider",
+  "name": "prestashop/ps_imageslider",
+  "description": "PrestaShop - Image slider",
+  "homepage": "https://github.com/PrestaShop/ps_imageslider",
   "license": "AFL - Academic Free License (AFL 3.0)",
   "authors": [
     {
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": ">=5.3.2"
+    "php": ">=5.4.0"
   },
   "config": {
     "preferred-install": "dist"
